--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Istok+Web:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
 
   <!-- External CSS -->
   <link rel="stylesheet" href="assets/css/index.css">
