--- a/login.html
+++ b/login.html
@@ -5,6 +5,10 @@
   <title>Login • Socialize</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!--Logo favicon-->
+    <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
+
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Istok+Web:wght@400;700&display=swap" rel="stylesheet">
 
