--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Istok+Web:wght@400;700&display=swap" rel="stylesheet">
 
+  <!--Logo favicon-->
+  <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
+
   <!-- External CSS -->
   <link rel="stylesheet" href="assets/css/signup.css">
 </head>
@@ -19,41 +22,43 @@
     <h1>REGISTRATION</h1>
     <div class="line"></div>
 
-    <form id="signup-form">
-      <div class="row-2">
-        <div style="flex:1;">
-          <label>First Name</label>
-          <input type="text" id="fname" placeholder="Name" required>
-        </div>
-        <div style="flex:1;">
-          <label>Last Name</label>
-          <input type="text" id="lname" placeholder="Name" required>
-        </div>
-      </div>
+<form id="signup-form">
 
-      <label>User Name</label>
-      <input type="text" id="username" placeholder="User Name" required>
+  <div class="row-2">
+    <div style="flex:1;">
+      <label>First Name</label>
+      <input type="text" id="fname" placeholder="Name" required />
+    </div>
+    <div style="flex:1;">
+      <label>Last Name</label>
+      <input type="text" id="lname" placeholder="Name" required />
+    </div>
+  </div>
 
-      <div class="row-2">
-        <div style="flex:1;">
-          <label>Password</label>
-          <input type="password" id="password" placeholder="Password" required>
-        </div>
-        <div style="flex:1;">
-          <label>Confirm Password</label>
-          <input type="password" id="confirm-password" placeholder="Password" required>
-        </div>
-      </div>
+  <label>Username</label>
+  <input type="text" id="username" placeholder="Choose username" required />
 
-      <label>Email</label>
-      <input type="email" id="email" placeholder="Email" required>
+  <div class="row-2">
+    <div style="flex:1;">
+      <label>Password</label>
+      <input type="password" id="password" placeholder="Password" required />
+    </div>
+    <div style="flex:1;">
+      <label>Confirm password</label>
+      <input type="password" id="confirm-password" placeholder="Password" required />
+    </div>
+  </div>
 
-      <button class="btn-signup" type="submit">Sign Up</button>
+  <label>Email</label>
+  <input type="email" id="email" placeholder="Email" required />
 
-      <div class="signin-link">
-        Already have an account? <span onclick="window.location.href='login.html'">Sign In</span>
-      </div>
-    </form>
+  <button class="btn-signup" id="signup-btn" type="submit">Sign Up</button>
+
+  <div class="signin-link">
+    Already have an account? <span onclick="window.location.href='login.html'">Sign In</span>
+  </div>
+</form>
+
   </div>
 
   <!-- RIGHT ILLUSTRATION SIDE -->
@@ -64,6 +69,8 @@
 
   <!-- Firebase Script (Loaded Later) -->
   <script type="module" src="assets/js/main.js"></script>
+  <script type="module" src="assets/js/signup.js"></script>
+
 
 </body>
 </html>
