Authentication + security + description are done

--- a/settings.html
+++ b/settings.html
@@ -128,6 +128,8 @@
 
   <!-- Firebase init (auth, db on window) -->
   <script type="module" src="assets/js/main.js"></script>
+  <!-- Auth Guard -->
+  <script type="module" src="assets/js/auth-guard.js"></script>
   <!-- Page-specific logic -->
   <script type="module" src="assets/js/settings.js"></script>
 </body>
