--- a/signup.html
+++ b/signup.html
@@ -22,42 +22,57 @@
     <h1>REGISTRATION</h1>
     <div class="line"></div>
 
-<form id="signup-form">
+    <form id="signup-form">
 
-  <div class="row-2">
-    <div style="flex:1;">
-      <label>First Name</label>
-      <input type="text" id="fname" placeholder="Name" required />
-    </div>
-    <div style="flex:1;">
-      <label>Last Name</label>
-      <input type="text" id="lname" placeholder="Name" required />
-    </div>
-  </div>
+      <div class="row-2">
+        <div style="flex:1;">
+          <label>First Name</label>
+          <input type="text" id="fname" placeholder="Name" required />
+        </div>
+        <div style="flex:1;">
+          <label>Last Name</label>
+          <input type="text" id="lname" placeholder="Name" required />
+        </div>
+      </div>
 
-  <label>Username</label>
-  <input type="text" id="username" placeholder="Choose username" required />
+      <label>Username</label>
+      <input type="text" id="username" placeholder="Choose username" required />
 
-  <div class="row-2">
-    <div style="flex:1;">
-      <label>Password</label>
-      <input type="password" id="password" placeholder="Password" required />
-    </div>
-    <div style="flex:1;">
-      <label>Confirm password</label>
-      <input type="password" id="confirm-password" placeholder="Password" required />
-    </div>
-  </div>
+      <div class="row-2">
+        <div style="flex:1;">
+          <label>Password</label>
+          <input type="password" id="password" placeholder="Password" required />
+        </div>
+        <div style="flex:1;">
+          <label>Confirm password</label>
+          <input type="password" id="confirm-password" placeholder="Password" required />
+        </div>
+      </div>
 
-  <label>Email</label>
-  <input type="email" id="email" placeholder="Email" required />
+      <label>Email</label>
+      <input type="email" id="email" placeholder="Email" required />
 
-  <button class="btn-signup" id="signup-btn" type="submit">Sign Up</button>
+      <button class="btn-signup" id="signup-btn" type="submit">Sign Up</button>
 
-  <div class="signin-link">
-    Already have an account? <span onclick="window.location.href='login.html'">Sign In</span>
-  </div>
-</form>
+      <div class="or-divider">
+        <span>OR</span>
+      </div>
+
+      <!-- GOOGLE SIGN-UP BUTTON -->
+      <button type="button" id="google-signup-btn" class="btn-google">
+        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M17.64 9.2c0-.637-.057-1.251-.164-1.84H9v3.481h4.844c-.209 1.125-.843 2.078-1.796 2.717v2.258h2.908c1.702-1.567 2.684-3.874 2.684-6.615z" fill="#4285F4"/>
+          <path d="M9.003 18c2.43 0 4.467-.806 5.956-2.18L12.05 13.56c-.806.54-1.836.86-3.047.86-2.344 0-4.328-1.584-5.036-3.711H.96v2.332C2.438 15.983 5.482 18 9.003 18z" fill="#34A853"/>
+          <path d="M3.964 10.712c-.18-.54-.282-1.117-.282-1.71 0-.593.102-1.17.282-1.71V4.96H.957C.347 6.175 0 7.55 0 9.002c0 1.452.348 2.827.957 4.042l3.007-2.332z" fill="#FBBC05"/>
+          <path d="M9.003 3.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C13.464.891 11.426 0 9.003 0 5.482 0 2.438 2.017.96 4.958L3.967 7.29c.708-2.127 2.692-3.71 5.036-3.71z" fill="#EA4335"/>
+        </svg>
+        Sign up with Google
+      </button>
+
+      <div class="signin-link">
+        Already have an account? <span onclick="window.location.href='login.html'">Sign In</span>
+      </div>
+    </form>
 
   </div>
 
@@ -70,7 +85,6 @@
   <!-- Firebase Script (Loaded Later) -->
   <script type="module" src="assets/js/main.js"></script>
   <script type="module" src="assets/js/signup.js"></script>
-
 
 </body>
 </html>
