--- a/find-event.html
+++ b/find-event.html
@@ -169,7 +169,7 @@
   <script type="module" src="assets/js/auth-guard.js"></script>
   <script type="module"  src="assets/js/find-event.js"></script>
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqqWeX_gf0uPwfJInrEO4urYpW8IngRzs&callback=initMap&loading=async"
+    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&loading=async"
     async
   ></script>
 
