PITCH READY DEMO

--- a/create-event.html
+++ b/create-event.html
@@ -116,7 +116,7 @@
 
   <!-- Google Maps JS (use your working key here) -->
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&loading=async"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqqWeX_gf0uPwfJInrEO4urYpW8IngRzs&callback=initMap&loading=async"
     
     async
   ></script>
